parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> root
Rule 1     root -> expr
Rule 2     expr -> expr PLUS expr
Rule 3     expr -> expr MINUS expr
Rule 4     expr -> expr TIMES expr
Rule 5     expr -> expr DIVIDE expr
Rule 6     expr -> expr FLOOR expr
Rule 7     expr -> expr MOD expr
Rule 8     expr -> expr POW expr
Rule 9     expr -> expr AND expr
Rule 10    expr -> expr OR expr
Rule 11    expr -> expr GT expr
Rule 12    expr -> expr GE expr
Rule 13    expr -> expr EQ expr
Rule 14    expr -> expr LT expr
Rule 15    expr -> expr LE expr
Rule 16    expr -> expr NE expr
Rule 17    expr -> LBRACE items RBRACE
Rule 18    items -> items COMMA expr
Rule 19    items -> expr
Rule 20    expr -> expr LBRACE expr RBRACE
Rule 21    expr -> STRING LBRACE expr RBRACE
Rule 22    expr -> LBRACE RBRACE
Rule 23    expr -> LPAREN expr RPAREN
Rule 24    expr -> NOT expr
Rule 25    expr -> STRING
Rule 26    expr -> NUMBER
Rule 27    expr -> BOOL
Rule 28    expr -> expr IN expr

Terminals, with rules where they appear

AND                  : 9
BOOL                 : 27
COMMA                : 18
DIVIDE               : 5
EQ                   : 13
FLOOR                : 6
GE                   : 12
GT                   : 11
IN                   : 28
LBRACE               : 17 20 21 22
LE                   : 15
LPAREN               : 23
LT                   : 14
MINUS                : 3
MOD                  : 7
NE                   : 16
NOT                  : 24
NUMBER               : 26
OR                   : 10
PLUS                 : 2
POW                  : 8
RBRACE               : 17 20 21 22
RPAREN               : 23
STRING               : 21 25
TIMES                : 4
error                : 

Nonterminals, with rules where they appear

expr                 : 1 2 2 3 3 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 18 19 20 20 21 23 24 28 28
items                : 17 18
root                 : 0

Parsing method: LALR

state 0

    (0) S' -> . root
    (1) root -> . expr
    (2) expr -> . expr PLUS expr
    (3) expr -> . expr MINUS expr
    (4) expr -> . expr TIMES expr
    (5) expr -> . expr DIVIDE expr
    (6) expr -> . expr FLOOR expr
    (7) expr -> . expr MOD expr
    (8) expr -> . expr POW expr
    (9) expr -> . expr AND expr
    (10) expr -> . expr OR expr
    (11) expr -> . expr GT expr
    (12) expr -> . expr GE expr
    (13) expr -> . expr EQ expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr LE expr
    (16) expr -> . expr NE expr
    (17) expr -> . LBRACE items RBRACE
    (20) expr -> . expr LBRACE expr RBRACE
    (21) expr -> . STRING LBRACE expr RBRACE
    (22) expr -> . LBRACE RBRACE
    (23) expr -> . LPAREN expr RPAREN
    (24) expr -> . NOT expr
    (25) expr -> . STRING
    (26) expr -> . NUMBER
    (27) expr -> . BOOL
    (28) expr -> . expr IN expr

    LBRACE          shift and go to state 3
    STRING          shift and go to state 4
    LPAREN          shift and go to state 5
    NOT             shift and go to state 6
    NUMBER          shift and go to state 7
    BOOL            shift and go to state 8

    root                           shift and go to state 1
    expr                           shift and go to state 2

state 1

    (0) S' -> root .



state 2

    (1) root -> expr .
    (2) expr -> expr . PLUS expr
    (3) expr -> expr . MINUS expr
    (4) expr -> expr . TIMES expr
    (5) expr -> expr . DIVIDE expr
    (6) expr -> expr . FLOOR expr
    (7) expr -> expr . MOD expr
    (8) expr -> expr . POW expr
    (9) expr -> expr . AND expr
    (10) expr -> expr . OR expr
    (11) expr -> expr . GT expr
    (12) expr -> expr . GE expr
    (13) expr -> expr . EQ expr
    (14) expr -> expr . LT expr
    (15) expr -> expr . LE expr
    (16) expr -> expr . NE expr
    (20) expr -> expr . LBRACE expr RBRACE
    (28) expr -> expr . IN expr

    $end            reduce using rule 1 (root -> expr .)
    PLUS            shift and go to state 9
    MINUS           shift and go to state 10
    TIMES           shift and go to state 11
    DIVIDE          shift and go to state 12
    FLOOR           shift and go to state 13
    MOD             shift and go to state 14
    POW             shift and go to state 15
    AND             shift and go to state 16
    OR              shift and go to state 17
    GT              shift and go to state 18
    GE              shift and go to state 19
    EQ              shift and go to state 20
    LT              shift and go to state 21
    LE              shift and go to state 22
    NE              shift and go to state 23
    LBRACE          shift and go to state 24
    IN              shift and go to state 25


state 3

    (17) expr -> LBRACE . items RBRACE
    (22) expr -> LBRACE . RBRACE
    (18) items -> . items COMMA expr
    (19) items -> . expr
    (2) expr -> . expr PLUS expr
    (3) expr -> . expr MINUS expr
    (4) expr -> . expr TIMES expr
    (5) expr -> . expr DIVIDE expr
    (6) expr -> . expr FLOOR expr
    (7) expr -> . expr MOD expr
    (8) expr -> . expr POW expr
    (9) expr -> . expr AND expr
    (10) expr -> . expr OR expr
    (11) expr -> . expr GT expr
    (12) expr -> . expr GE expr
    (13) expr -> . expr EQ expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr LE expr
    (16) expr -> . expr NE expr
    (17) expr -> . LBRACE items RBRACE
    (20) expr -> . expr LBRACE expr RBRACE
    (21) expr -> . STRING LBRACE expr RBRACE
    (22) expr -> . LBRACE RBRACE
    (23) expr -> . LPAREN expr RPAREN
    (24) expr -> . NOT expr
    (25) expr -> . STRING
    (26) expr -> . NUMBER
    (27) expr -> . BOOL
    (28) expr -> . expr IN expr

    RBRACE          shift and go to state 27
    LBRACE          shift and go to state 3
    STRING          shift and go to state 4
    LPAREN          shift and go to state 5
    NOT             shift and go to state 6
    NUMBER          shift and go to state 7
    BOOL            shift and go to state 8

    items                          shift and go to state 26
    expr                           shift and go to state 28

state 4

    (21) expr -> STRING . LBRACE expr RBRACE
    (25) expr -> STRING .

  ! shift/reduce conflict for LBRACE resolved as shift
    LBRACE          shift and go to state 29
    PLUS            reduce using rule 25 (expr -> STRING .)
    MINUS           reduce using rule 25 (expr -> STRING .)
    TIMES           reduce using rule 25 (expr -> STRING .)
    DIVIDE          reduce using rule 25 (expr -> STRING .)
    FLOOR           reduce using rule 25 (expr -> STRING .)
    MOD             reduce using rule 25 (expr -> STRING .)
    POW             reduce using rule 25 (expr -> STRING .)
    AND             reduce using rule 25 (expr -> STRING .)
    OR              reduce using rule 25 (expr -> STRING .)
    GT              reduce using rule 25 (expr -> STRING .)
    GE              reduce using rule 25 (expr -> STRING .)
    EQ              reduce using rule 25 (expr -> STRING .)
    LT              reduce using rule 25 (expr -> STRING .)
    LE              reduce using rule 25 (expr -> STRING .)
    NE              reduce using rule 25 (expr -> STRING .)
    IN              reduce using rule 25 (expr -> STRING .)
    $end            reduce using rule 25 (expr -> STRING .)
    RBRACE          reduce using rule 25 (expr -> STRING .)
    COMMA           reduce using rule 25 (expr -> STRING .)
    RPAREN          reduce using rule 25 (expr -> STRING .)

  ! LBRACE          [ reduce using rule 25 (expr -> STRING .) ]


state 5

    (23) expr -> LPAREN . expr RPAREN
    (2) expr -> . expr PLUS expr
    (3) expr -> . expr MINUS expr
    (4) expr -> . expr TIMES expr
    (5) expr -> . expr DIVIDE expr
    (6) expr -> . expr FLOOR expr
    (7) expr -> . expr MOD expr
    (8) expr -> . expr POW expr
    (9) expr -> . expr AND expr
    (10) expr -> . expr OR expr
    (11) expr -> . expr GT expr
    (12) expr -> . expr GE expr
    (13) expr -> . expr EQ expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr LE expr
    (16) expr -> . expr NE expr
    (17) expr -> . LBRACE items RBRACE
    (20) expr -> . expr LBRACE expr RBRACE
    (21) expr -> . STRING LBRACE expr RBRACE
    (22) expr -> . LBRACE RBRACE
    (23) expr -> . LPAREN expr RPAREN
    (24) expr -> . NOT expr
    (25) expr -> . STRING
    (26) expr -> . NUMBER
    (27) expr -> . BOOL
    (28) expr -> . expr IN expr

    LBRACE          shift and go to state 3
    STRING          shift and go to state 4
    LPAREN          shift and go to state 5
    NOT             shift and go to state 6
    NUMBER          shift and go to state 7
    BOOL            shift and go to state 8

    expr                           shift and go to state 30

state 6

    (24) expr -> NOT . expr
    (2) expr -> . expr PLUS expr
    (3) expr -> . expr MINUS expr
    (4) expr -> . expr TIMES expr
    (5) expr -> . expr DIVIDE expr
    (6) expr -> . expr FLOOR expr
    (7) expr -> . expr MOD expr
    (8) expr -> . expr POW expr
    (9) expr -> . expr AND expr
    (10) expr -> . expr OR expr
    (11) expr -> . expr GT expr
    (12) expr -> . expr GE expr
    (13) expr -> . expr EQ expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr LE expr
    (16) expr -> . expr NE expr
    (17) expr -> . LBRACE items RBRACE
    (20) expr -> . expr LBRACE expr RBRACE
    (21) expr -> . STRING LBRACE expr RBRACE
    (22) expr -> . LBRACE RBRACE
    (23) expr -> . LPAREN expr RPAREN
    (24) expr -> . NOT expr
    (25) expr -> . STRING
    (26) expr -> . NUMBER
    (27) expr -> . BOOL
    (28) expr -> . expr IN expr

    LBRACE          shift and go to state 3
    STRING          shift and go to state 4
    LPAREN          shift and go to state 5
    NOT             shift and go to state 6
    NUMBER          shift and go to state 7
    BOOL            shift and go to state 8

    expr                           shift and go to state 31

state 7

    (26) expr -> NUMBER .

    PLUS            reduce using rule 26 (expr -> NUMBER .)
    MINUS           reduce using rule 26 (expr -> NUMBER .)
    TIMES           reduce using rule 26 (expr -> NUMBER .)
    DIVIDE          reduce using rule 26 (expr -> NUMBER .)
    FLOOR           reduce using rule 26 (expr -> NUMBER .)
    MOD             reduce using rule 26 (expr -> NUMBER .)
    POW             reduce using rule 26 (expr -> NUMBER .)
    AND             reduce using rule 26 (expr -> NUMBER .)
    OR              reduce using rule 26 (expr -> NUMBER .)
    GT              reduce using rule 26 (expr -> NUMBER .)
    GE              reduce using rule 26 (expr -> NUMBER .)
    EQ              reduce using rule 26 (expr -> NUMBER .)
    LT              reduce using rule 26 (expr -> NUMBER .)
    LE              reduce using rule 26 (expr -> NUMBER .)
    NE              reduce using rule 26 (expr -> NUMBER .)
    LBRACE          reduce using rule 26 (expr -> NUMBER .)
    IN              reduce using rule 26 (expr -> NUMBER .)
    $end            reduce using rule 26 (expr -> NUMBER .)
    RBRACE          reduce using rule 26 (expr -> NUMBER .)
    COMMA           reduce using rule 26 (expr -> NUMBER .)
    RPAREN          reduce using rule 26 (expr -> NUMBER .)


state 8

    (27) expr -> BOOL .

    PLUS            reduce using rule 27 (expr -> BOOL .)
    MINUS           reduce using rule 27 (expr -> BOOL .)
    TIMES           reduce using rule 27 (expr -> BOOL .)
    DIVIDE          reduce using rule 27 (expr -> BOOL .)
    FLOOR           reduce using rule 27 (expr -> BOOL .)
    MOD             reduce using rule 27 (expr -> BOOL .)
    POW             reduce using rule 27 (expr -> BOOL .)
    AND             reduce using rule 27 (expr -> BOOL .)
    OR              reduce using rule 27 (expr -> BOOL .)
    GT              reduce using rule 27 (expr -> BOOL .)
    GE              reduce using rule 27 (expr -> BOOL .)
    EQ              reduce using rule 27 (expr -> BOOL .)
    LT              reduce using rule 27 (expr -> BOOL .)
    LE              reduce using rule 27 (expr -> BOOL .)
    NE              reduce using rule 27 (expr -> BOOL .)
    LBRACE          reduce using rule 27 (expr -> BOOL .)
    IN              reduce using rule 27 (expr -> BOOL .)
    $end            reduce using rule 27 (expr -> BOOL .)
    RBRACE          reduce using rule 27 (expr -> BOOL .)
    COMMA           reduce using rule 27 (expr -> BOOL .)
    RPAREN          reduce using rule 27 (expr -> BOOL .)


state 9

    (2) expr -> expr PLUS . expr
    (2) expr -> . expr PLUS expr
    (3) expr -> . expr MINUS expr
    (4) expr -> . expr TIMES expr
    (5) expr -> . expr DIVIDE expr
    (6) expr -> . expr FLOOR expr
    (7) expr -> . expr MOD expr
    (8) expr -> . expr POW expr
    (9) expr -> . expr AND expr
    (10) expr -> . expr OR expr
    (11) expr -> . expr GT expr
    (12) expr -> . expr GE expr
    (13) expr -> . expr EQ expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr LE expr
    (16) expr -> . expr NE expr
    (17) expr -> . LBRACE items RBRACE
    (20) expr -> . expr LBRACE expr RBRACE
    (21) expr -> . STRING LBRACE expr RBRACE
    (22) expr -> . LBRACE RBRACE
    (23) expr -> . LPAREN expr RPAREN
    (24) expr -> . NOT expr
    (25) expr -> . STRING
    (26) expr -> . NUMBER
    (27) expr -> . BOOL
    (28) expr -> . expr IN expr

    LBRACE          shift and go to state 3
    STRING          shift and go to state 4
    LPAREN          shift and go to state 5
    NOT             shift and go to state 6
    NUMBER          shift and go to state 7
    BOOL            shift and go to state 8

    expr                           shift and go to state 32

state 10

    (3) expr -> expr MINUS . expr
    (2) expr -> . expr PLUS expr
    (3) expr -> . expr MINUS expr
    (4) expr -> . expr TIMES expr
    (5) expr -> . expr DIVIDE expr
    (6) expr -> . expr FLOOR expr
    (7) expr -> . expr MOD expr
    (8) expr -> . expr POW expr
    (9) expr -> . expr AND expr
    (10) expr -> . expr OR expr
    (11) expr -> . expr GT expr
    (12) expr -> . expr GE expr
    (13) expr -> . expr EQ expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr LE expr
    (16) expr -> . expr NE expr
    (17) expr -> . LBRACE items RBRACE
    (20) expr -> . expr LBRACE expr RBRACE
    (21) expr -> . STRING LBRACE expr RBRACE
    (22) expr -> . LBRACE RBRACE
    (23) expr -> . LPAREN expr RPAREN
    (24) expr -> . NOT expr
    (25) expr -> . STRING
    (26) expr -> . NUMBER
    (27) expr -> . BOOL
    (28) expr -> . expr IN expr

    LBRACE          shift and go to state 3
    STRING          shift and go to state 4
    LPAREN          shift and go to state 5
    NOT             shift and go to state 6
    NUMBER          shift and go to state 7
    BOOL            shift and go to state 8

    expr                           shift and go to state 33

state 11

    (4) expr -> expr TIMES . expr
    (2) expr -> . expr PLUS expr
    (3) expr -> . expr MINUS expr
    (4) expr -> . expr TIMES expr
    (5) expr -> . expr DIVIDE expr
    (6) expr -> . expr FLOOR expr
    (7) expr -> . expr MOD expr
    (8) expr -> . expr POW expr
    (9) expr -> . expr AND expr
    (10) expr -> . expr OR expr
    (11) expr -> . expr GT expr
    (12) expr -> . expr GE expr
    (13) expr -> . expr EQ expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr LE expr
    (16) expr -> . expr NE expr
    (17) expr -> . LBRACE items RBRACE
    (20) expr -> . expr LBRACE expr RBRACE
    (21) expr -> . STRING LBRACE expr RBRACE
    (22) expr -> . LBRACE RBRACE
    (23) expr -> . LPAREN expr RPAREN
    (24) expr -> . NOT expr
    (25) expr -> . STRING
    (26) expr -> . NUMBER
    (27) expr -> . BOOL
    (28) expr -> . expr IN expr

    LBRACE          shift and go to state 3
    STRING          shift and go to state 4
    LPAREN          shift and go to state 5
    NOT             shift and go to state 6
    NUMBER          shift and go to state 7
    BOOL            shift and go to state 8

    expr                           shift and go to state 34

state 12

    (5) expr -> expr DIVIDE . expr
    (2) expr -> . expr PLUS expr
    (3) expr -> . expr MINUS expr
    (4) expr -> . expr TIMES expr
    (5) expr -> . expr DIVIDE expr
    (6) expr -> . expr FLOOR expr
    (7) expr -> . expr MOD expr
    (8) expr -> . expr POW expr
    (9) expr -> . expr AND expr
    (10) expr -> . expr OR expr
    (11) expr -> . expr GT expr
    (12) expr -> . expr GE expr
    (13) expr -> . expr EQ expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr LE expr
    (16) expr -> . expr NE expr
    (17) expr -> . LBRACE items RBRACE
    (20) expr -> . expr LBRACE expr RBRACE
    (21) expr -> . STRING LBRACE expr RBRACE
    (22) expr -> . LBRACE RBRACE
    (23) expr -> . LPAREN expr RPAREN
    (24) expr -> . NOT expr
    (25) expr -> . STRING
    (26) expr -> . NUMBER
    (27) expr -> . BOOL
    (28) expr -> . expr IN expr

    LBRACE          shift and go to state 3
    STRING          shift and go to state 4
    LPAREN          shift and go to state 5
    NOT             shift and go to state 6
    NUMBER          shift and go to state 7
    BOOL            shift and go to state 8

    expr                           shift and go to state 35

state 13

    (6) expr -> expr FLOOR . expr
    (2) expr -> . expr PLUS expr
    (3) expr -> . expr MINUS expr
    (4) expr -> . expr TIMES expr
    (5) expr -> . expr DIVIDE expr
    (6) expr -> . expr FLOOR expr
    (7) expr -> . expr MOD expr
    (8) expr -> . expr POW expr
    (9) expr -> . expr AND expr
    (10) expr -> . expr OR expr
    (11) expr -> . expr GT expr
    (12) expr -> . expr GE expr
    (13) expr -> . expr EQ expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr LE expr
    (16) expr -> . expr NE expr
    (17) expr -> . LBRACE items RBRACE
    (20) expr -> . expr LBRACE expr RBRACE
    (21) expr -> . STRING LBRACE expr RBRACE
    (22) expr -> . LBRACE RBRACE
    (23) expr -> . LPAREN expr RPAREN
    (24) expr -> . NOT expr
    (25) expr -> . STRING
    (26) expr -> . NUMBER
    (27) expr -> . BOOL
    (28) expr -> . expr IN expr
